[package]
name = "qloop-software-pipeline"
version = "0.1.0"
authors = ["gjz010"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sploop"
path = "src/lib.rs"
type = ["lib", "cdylib"]
[[bin]]
name = "sploop_optimize"
path = "src/bin.rs"

[dependencies]
# z3 = {version="0.6.0", features = ["static-link-z3"]}
num-traits = "0.2.12"
ndarray = "0.13.1"
nalgebra = "0.21.1"
num = "0.3.0"
bitvec = "0.17.4"
rand = "0.7.3"
replace_with = "*"
binary-heap-plus = "0.3.0"
itertools = "0.9.0"
nom = "*"
nom-methods = "0.2.0"
serde = {version="1.0.115", features=["derive"]}
serde_json = "1.0"
log = "*"
env_logger = "0.8.1"